# puppeteer

./: .dockerignore  .env.example  .gitignore  Dockerfile.txt  README.md  app.py  auto-sdlc.code-workspace  config.py  dag.py  git_utils.py  job_store.py  llm.py  models.py  pyproject.toml  travel-expert-notebook.ipynb  workspace.py
.github/: copilot-instructions.md
.github/agents/: silver.agent.md
.github/workflows/: pipeline-orchestrator-AutoDeployTrigger-2e312c68-02b7-4181-9e28-344162240f49.yml
client/: copilot_bridge.py  dev_launch.py  mock_llm.py  sdlc.ps1
dashboard/: .gitignore  _check.js  _chess_response.py  _copilot_driver.py  _write_response.py  cache.jsonl  db.py  dev_test.py  hiveship_obs.db  hiveship_obs.db-shm  hiveship_obs.db-wal  index.html  mock_llm.py  run_test.py  serve.py  telemetry.jsonl
dashboard/logs/: _call5.py  _check_pr.py  _gen_delivery.py  _resp.py  _write_delivery.py  _write_resp.py  current_response.json
docker/: Dockerfile  docker-compose.yml
docs/: diagram-technical.mmd
docs/analysis/: failure-modes.md
docs/architecture/: diagram-executive.mmd
legacy/: app_old.py
pipeline-docs/RPL_ServiceMesh_Kubernetes_Vault_Docs/: delivery_pipeline_to_release_pipeline_migration_guide.md  getting_started_with_release_pipeline.md  github_action_runners_linux.md  github_action_runners_overview.md  github_action_runners_windows.md  k8s_deployments_via_secure_channel.md  kubernetes_sap_concur_overview.md  (+5 more)
routes/: generation.py  status.py  webhook.py
sandbox/: qwen-3-5-vllm-api.ipynb  run_chess_test.py
tests/: conftest.py
(+129 files in other folders)
